modify index.html, add more owl carousel

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="./css/animate.css" />
     <!-- Lightbox CSS -->
     <link rel="stylesheet" href="./css/lightbox.min.css" />
+    <!--Owl Carousel CSS -->
+    <link rel="stylesheet" href="./css/owl.carousel.min.css">
+    <link rel="stylesheet" href="./css/owl.theme.default.min.css">
   </head>
   <body>
     <!-- Header -->
@@ -265,6 +268,30 @@
             <p>- Cake Maker</p>
           </div>
           <!-- Overlay -->
+          <div class="overlay">
+            <div class="text">
+              <h3>John Simon</h3>
+              <p>-Cake Maker</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, dolore.</p>
+              <ul>
+                <li>
+                  <a href="#">
+                    <i class="fab fa-facebook-f"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <i class="fab fa-google-plus-g"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
         <div class="bake__team__item">
           <img src="./images/t2.jpg" alt="" />
@@ -273,6 +300,30 @@
             <p>- Cake Maker</p>
           </div>
           <!-- Overlay -->
+          <div class="overlay">
+            <div class="text">
+              <h3>John Simon</h3>
+              <p>-Cake Maker</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, dolore.</p>
+              <ul>
+                <li>
+                  <a href="#">
+                    <i class="fab fa-facebook-f"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <i class="fab fa-google-plus-g"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
         <div class="bake__team__item">
           <img src="./images/t3.jpg" alt="" />
@@ -281,9 +332,192 @@
             <p>- Cake Maker</p>
           </div>
           <!-- Overlay -->
+          <div class="overlay">
+            <div class="text">
+              <h3>John Simon</h3>
+              <p>-Cake Maker</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, dolore.</p>
+              <ul>
+                <li>
+                  <a href="#">
+                    <i class="fab fa-facebook-f"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <i class="fab fa-google-plus-g"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+          <div class="bake__team__item">
+            <img src="./images/t4.jpg" alt="" />
+            <div class="item__content">
+              <h3>John Simon</h3>
+              <p>- Cake Maker</p>
+            </div>
+            <!-- Overlay -->
+            <div class="overlay">
+              <div class="text">
+                <h3>John Simon</h3>
+                <p>-Cake Maker</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, dolore.</p>
+                <ul>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-facebook-f"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-google-plus-g"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="bake__team__item">
+            <img src="./images/t2.jpg" alt="" />
+            <div class="item__content">
+              <h3>John Simon</h3>
+              <p>- Cake Maker</p>
+            </div>
+            <!-- Overlay -->
+            <div class="overlay">
+              <div class="text">
+                <h3>John Simon</h3>
+                <p>-Cake Maker</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, dolore.</p>
+                <ul>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-facebook-f"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-google-plus-g"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="bake__team__item">
+            <img src="./images/t3.jpg" alt="" />
+            <div class="item__content">
+              <h3>John Simon</h3>
+              <p>- Cake Maker</p>
+            </div>
+            <!-- Overlay -->
+            <div class="overlay">
+              <div class="text">
+                <h3>John Simon</h3>
+                <p>-Cake Maker</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, dolore.</p>
+                <ul>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-facebook-f"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-google-plus-g"></i>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+    </section>
+    <!-- Testimonials -->
+    <section id="testimonials">
+      <h1>testimonials</h1>
+      <div class="testimonials__content">
+        <div class="owl-carousel owl-theme">
+          <div class="testimonials__item">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda perferendis voluptas molestias nemo fuga alias error non! Incidunt corporis assumenda impedit natus, mollitia quasi enim exercitationem non, illo ipsum aliquid.</p>
+            <p>Alice</p>
+          </div>
+          <div class="testimonials__item">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda perferendis voluptas molestias nemo fuga alias error non! Incidunt corporis assumenda impedit natus, mollitia quasi enim exercitationem non, illo ipsum aliquid.</p>
+            <p>Max</p>
+          </div>
+          <div class="testimonials__item">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda perferendis voluptas molestias nemo fuga alias error non! Incidunt corporis assumenda impedit natus, mollitia quasi enim exercitationem non, illo ipsum aliquid.</p>
+            <p>Tom</p>
+          </div>
         </div>
       </div>
     </section>
+    <!-- Contact -->
+    <section id="contact">
+      <h1>contact</h1>
+      <div class="contact__content">
+        <form>
+          <div class="contact__item">
+            <input type="text" placeholder="Name" />
+          </div>
+          <div class="contact__item">
+            <input type="text" placeholder="Last Name" />
+          </div>
+          <div class="contact__item">
+            <input type="email" placeholder="Email" />
+          </div>
+          <div class="contact__item">
+            <input type="text" placeholder="Phone"/>
+          </div>
+          <div class="contact__item width-100">
+            <textarea placeholder="Message" rows="10"></textarea>
+          </div>
+          <button class="btn__send">Send</button>
+        </form>
+      </div>
+    </section>
+    <!-- Google Map -->
+    <section id="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.5096836443977!2d106.67765461411638!3d10.772220662218563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f211a20768b%3A0xb9bb32aa11cf2d62!2zMTEyIENhbyBUaOG6r25nLCBQaMaw4budbmcgNCwgUXXhuq1uIDMsIFRow6BuaCBwaOG7kSBI4buTIENow60gTWluaCwgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1602251273235!5m2!1svi!2s" 
+      width="100%"
+      height="450" 
+      frameborder="0" 
+      style="border:0; padding: 0 10rem;" 
+      allowfullscreen="" 
+      aria-hidden="false" 
+      tabindex="0">
+      </iframe>
+    </section>
+    <!-- Back To Top -->
+    <div class="backToTop">
+      <a href="#" class="backToTopLink cd-top text-replace js-cd-top">
+        <i class="fas fa-arrow-circle-up fa-2x"></i>
+      </a>
+    </div>
+    <!-- Animation Effects -->
+    <div class="animation"></div>
     <!-- JQuery Scripts -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"
@@ -302,5 +536,28 @@
     <script>
       $(".counter").countUp();
     </script>
+    <!-- Owl Carousel js -->
+    <script src="./js/owl.carousel.min.js"></script>
+    <script>
+      $('.owl-carousel').owlCarousel({
+    loop:true,
+    margin:10,
+    nav:false,
+    responsive:{
+        0:{
+            items:1
+        },
+        600:{
+            items:3
+        },
+        1000:{
+            items:1
+        }
+    }
+})
+    </script>
+    <!-- Back To Top Js -->
+    <script src="./js/util.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
