--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
       <nav class="header__nav">
         <ul>
           <li class="active"><a href="#home">Home</a></li>
-          <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#service">Service</a></li>
           <li><a href="#gallery">Gallery</a></li>
@@ -44,64 +43,56 @@
       <div class="carousel__content">
         <h1>best bake here</h1>
         <p>Donec at massa nec sem eleifend fermentum.</p>
-        <button>Learn more</button>
+        <button class="btn">Learn more</button>
       </div>
     </section>
     <!-- Intro -->
     <section id="intro">
       <div class="intro__item intro__tradition">
-        <div>
           <h3>Tradiiton</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo,
             nobis.
           </p>
-        </div>
       </div>
       <div class="intro__item intro__img1">
         <img src="./images/ab1.jpg" alt="" />
       </div>
       <div class="intro__item intro__creativity">
-        <div>
           <h3>Creativity</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo,
             nobis.
           </p>
-        </div>
       </div>
       <div class="intro__item intro__things">
-        <div>
           <h3>What We Bake Best For You</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo,
-            nobis.
+            nobis. Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Consequatur quisquam fugit porro aut voluptatem molestiae doloremque 
+            suscipit temporibus est ab?
           </p>
-        </div>
       </div>
       <div class="intro__item intro__img2">
         <img src="./images/ab2.jpg" alt="" />
       </div>
       <div class="intro__item intro__quality">
-        <div>
           <h3>Quality</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo,
             nobis.
           </p>
-        </div>
       </div>
       <div class="intro__item intro__img3">
         <img src="./images/ab3.jpg" alt="" />
       </div>
       <div class="intro__item intro__cakes">
-        <div>
           <h3>Tasty Cakes</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo,
             nobis.
           </p>
-        </div>
       </div>
       <div class="intro__item intro__img4">
         <img src="./images/ab4.jpg" alt="" />
@@ -126,50 +117,45 @@
         <h3>Exper Worker</h3>
       </div>
     </section>
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
     <!-- Our Services -->
     <section id="service">
       <h1 class="service__title wow slideInLeft">our services</h1>
       <div class="service__content">
         <div class="service__item">
           <i class="fas fa-adjust"></i>
-          <h4>Tasty Cakes</h4>
+          <p>Tasty Cakes</p>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis,
             deserunt?
           </p>
-          <button>Learn More</button>
+          <button class="btn">Learn More</button>
         </div>
         <div class="service__item">
-          <i class="fas fa-adjust"></i>
-          <h4>Tasty Cakes</h4>
+          <i class="far fa-snowflake"></i>
+          <p>Tasty Cakes</p>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis,
             deserunt?
           </p>
-          <button>Learn More</button>
+          <button class="btn">Learn More</button>
         </div>
         <div class="service__item">
-          <i class="fas fa-adjust"></i>
-          <h4>Tasty Cakes</h4>
+          <i class="fas fa-chart-pie"></i>
+          <p>Tasty Cakes</p>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis,
             deserunt?
           </p>
-          <button>Learn More</button>
+          <button class="btn">Learn More</button>
         </div>
         <div class="service__item">
-          <i class="fas fa-adjust"></i>
-          <h4>Tasty Cakes</h4>
+          <i class="fab fa-slideshare"></i>
+          <p>Tasty Cakes</p>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis,
             deserunt?
           </p>
-          <button>Learn More</button>
+          <button class="btn">Learn More</button>
         </div>
       </div>
     </section>
@@ -265,12 +251,12 @@
           <img src="./images/t1.jpg" alt="" />
           <div class="item__content">
             <h3>John Simon</h3>
-            <p>- Cake Maker</p>
+            <p>-Cake Maker</p>
           </div>
           <!-- Overlay -->
           <div class="overlay">
             <div class="text">
-              <h3>John Simon</h3>
+              <h4>John Simon</h4>
               <p>-Cake Maker</p>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, dolore.</p>
               <ul>
@@ -296,14 +282,14 @@
         <div class="bake__team__item">
           <img src="./images/t2.jpg" alt="" />
           <div class="item__content">
-            <h3>John Simon</h3>
-            <p>- Cake Maker</p>
+            <h3>Max Will</h3>
+            <p>-Coffee Maker</p>
           </div>
           <!-- Overlay -->
           <div class="overlay">
             <div class="text">
-              <h3>John Simon</h3>
-              <p>-Cake Maker</p>
+              <h4>Max Will</h4>
+              <p>-Coffee Maker</p>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, dolore.</p>
               <ul>
                 <li>
@@ -328,14 +314,14 @@
         <div class="bake__team__item">
           <img src="./images/t3.jpg" alt="" />
           <div class="item__content">
-            <h3>John Simon</h3>
-            <p>- Cake Maker</p>
+            <h3>Rose Murphy</h3>
+            <p>-Staff Manager</p>
           </div>
           <!-- Overlay -->
           <div class="overlay">
             <div class="text">
-              <h3>John Simon</h3>
-              <p>-Cake Maker</p>
+              <h4>Rose Murhphy</h4>
+              <p>-Staff Manager</p>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, dolore.</p>
               <ul>
                 <li>
@@ -360,13 +346,13 @@
           <div class="bake__team__item">
             <img src="./images/t4.jpg" alt="" />
             <div class="item__content">
-              <h3>John Simon</h3>
-              <p>- Cake Maker</p>
+              <h3>Barbara Will</h3>
+              <p>-Cake Maker</p>
             </div>
             <!-- Overlay -->
             <div class="overlay">
               <div class="text">
-                <h3>John Simon</h3>
+                <h4>Barbara Will</h4>
                 <p>-Cake Maker</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, dolore.</p>
                 <ul>
@@ -392,14 +378,14 @@
           <div class="bake__team__item">
             <img src="./images/t2.jpg" alt="" />
             <div class="item__content">
-              <h3>John Simon</h3>
-              <p>- Cake Maker</p>
+              <h3>Derek Bybee</h3>
+              <p>-Coffee Maker</p>
             </div>
             <!-- Overlay -->
             <div class="overlay">
               <div class="text">
-                <h3>John Simon</h3>
-                <p>-Cake Maker</p>
+                <h4>Derek Bybee</h4>
+                <p>-Coffee Maker</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, dolore.</p>
                 <ul>
                   <li>
@@ -424,14 +410,14 @@
           <div class="bake__team__item">
             <img src="./images/t3.jpg" alt="" />
             <div class="item__content">
-              <h3>John Simon</h3>
-              <p>- Cake Maker</p>
+              <h3>Lucille Webster</h3>
+              <p>-Staff Manager</p>
             </div>
             <!-- Overlay -->
             <div class="overlay">
               <div class="text">
-                <h3>John Simon</h3>
-                <p>-Cake Maker</p>
+                <h4>Lucille Webster</h4>
+                <p>-Staff Manager</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, dolore.</p>
                 <ul>
                   <li>
@@ -460,15 +446,27 @@
       <div class="testimonials__content">
         <div class="owl-carousel owl-theme">
           <div class="testimonials__item">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda perferendis voluptas molestias nemo fuga alias error non! Incidunt corporis assumenda impedit natus, mollitia quasi enim exercitationem non, illo ipsum aliquid.</p>
+            <p>
+              <i class="fas fa-quote-left"></i>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda perferendis voluptas molestias nemo fuga alias error non! Incidunt corporis assumenda impedit natus, mollitia quasi enim exercitationem non, illo ipsum aliquid.
+              <i class="fas fa-quote-right"></i>
+            </p>
             <p>Alice</p>
           </div>
           <div class="testimonials__item">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda perferendis voluptas molestias nemo fuga alias error non! Incidunt corporis assumenda impedit natus, mollitia quasi enim exercitationem non, illo ipsum aliquid.</p>
+            <p>
+              <i class="fas fa-quote-left"></i>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda perferendis voluptas molestias nemo fuga alias error non! Incidunt corporis assumenda impedit natus, mollitia quasi enim exercitationem non, illo ipsum aliquid.
+              <i class="fas fa-quote-right"></i>
+            </p>
             <p>Max</p>
           </div>
           <div class="testimonials__item">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda perferendis voluptas molestias nemo fuga alias error non! Incidunt corporis assumenda impedit natus, mollitia quasi enim exercitationem non, illo ipsum aliquid.</p>
+            <p>
+              <i class="fas fa-quote-left"></i>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda perferendis voluptas molestias nemo fuga alias error non! Incidunt corporis assumenda impedit natus, mollitia quasi enim exercitationem non, illo ipsum aliquid.
+              <i class="fas fa-quote-right"></i>
+            </p>
             <p>Tom</p>
           </div>
         </div>
@@ -497,19 +495,115 @@
           <button class="btn__send">Send</button>
         </form>
       </div>
+      <!-- Google Map -->
+      <div id="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.5096836443977!2d106.67765461411638!3d10.772220662218563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f211a20768b%3A0xb9bb32aa11cf2d62!2zMTEyIENhbyBUaOG6r25nLCBQaMaw4budbmcgNCwgUXXhuq1uIDMsIFRow6BuaCBwaOG7kSBI4buTIENow60gTWluaCwgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1602251273235!5m2!1svi!2s" 
+        width="100%"
+        height="450" 
+        frameborder="0" 
+        allowfullscreen="" 
+        aria-hidden="false" 
+        tabindex="0">
+        </iframe>
+      </div>
+      <!-- Contact Info -->
+      <div id="info">
+        <div class="info__item">
+          <i class="fas fa-home"></i>
+          <div class="info__desc">
+            <p>25478 Road St.121</p>
+            <p class="info__country">USA New Hill</p>
+          </div>
+        </div>
+        <div class="info__item">
+          <i class="fas fa-phone"></i>
+          <div class="info__desc">
+            <p>+(000) 123 4565 32</p>
+            <p>+(010) 123 4565 35</p>
+          </div>
+        </div>
+        <div class="info__item">
+          <i class="fas fa-envelope-open"></i>
+          <div class="info__desc">
+            <p>
+              <a href="mailto:info@example1.com">info@example1.com</a>
+            </p>
+            <p>
+              <a href="mailto:info@example2.com">info@example2.com</a>
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
-    <!-- Google Map -->
-    <section id="map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.5096836443977!2d106.67765461411638!3d10.772220662218563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f211a20768b%3A0xb9bb32aa11cf2d62!2zMTEyIENhbyBUaOG6r25nLCBQaMaw4budbmcgNCwgUXXhuq1uIDMsIFRow6BuaCBwaOG7kSBI4buTIENow60gTWluaCwgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1602251273235!5m2!1svi!2s" 
-      width="100%"
-      height="450" 
-      frameborder="0" 
-      style="border:0; padding: 0 10rem;" 
-      allowfullscreen="" 
-      aria-hidden="false" 
-      tabindex="0">
-      </iframe>
-    </section>
+    <!-- Footer -->
+    <footer>
+      <div class="footer__list">
+        <div class="footer__item">
+          <h3>about us</h3>
+          <p class="footer__item-desc">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+            Fugit, sit blanditiis. 
+            nisi sapiente voluptatum est ipsa alias? Dolor nequr odio ut 
+            <br/>
+            <span>
+              ab, excepturi officia, saepe 
+              et. Placeat?
+            </span>
+          </p>
+          <ul class="footer__item-social-icons">
+            <li>
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="fab fa-google-plus-g"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__item">
+          <h3>working time</h3>
+          <ul class="footer__item-schedule">
+            <li>monday <span>9:30-18:30</span></li>
+            <li>tuesday  <span>9:30-18:30</span></li>
+            <li>wednesday  <span>9:30-18:30</span></li>
+            <li>thursday  <span>9:30-18:30</span></li>
+            <li>friday  <span>9:30-18:30</span></li>
+            <li>saturday  <span>9:30-18:30</span></li>
+            <li>sunday <span>closed</span></li>
+          </ul>
+        </div>
+        <div class="footer__item">
+          <h3>twitter us</h3>
+          <p>Lorem ipsum  elit. Eveniet, consectetur?</p>
+          <p>Lorem ipsum  elit. Eveniet, consectetur?</p>
+          <p>Lorem ipsum  elit. Eveniet, consectetur?</p>
+          <p>Lorem ipsum  elit. Eveniet, consectetur?</p>
+        </div>
+        <div class="footer__item">
+          <h3>subscribe us</h3>
+          <form>
+            <input type="text" placeholder="name@example.com">
+            <button>send</button>
+          </form>
+          <div class="footer__item-desc">
+            <p>Lorem ipsum dolor, sit amet co. Minima vel facilis quo, reprehenderit ducimus explicabo cum illo soluta iure qui pariatur illum, natus id nesciunt reiciendis corporis nobis excepturi voluptate.</p>
+          </div>
+        </div>
+      </div>
+      <div class="footer__copy-rights">
+        <p>&#169 2018 bake. all rights reserved <span>|</span> design by 
+        <a href="https://w3layouts.com/">w3layouts</a>
+        </p>
+      </div>
+    </footer>
     <!-- Back To Top -->
     <div class="backToTop">
       <a href="#" class="backToTopLink cd-top text-replace js-cd-top">
@@ -517,32 +611,38 @@
       </a>
     </div>
     <!-- Animation Effects -->
-    <div class="animation"></div>
-    <!-- JQuery Scripts -->
+    <!-- <div class="animation"></div> -->
+    
+    <!-- JQuery Script -->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <!-- Waypoints Script -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"
       integrity="sha512-ZKNVEa7gi0Dz4Rq9jXcySgcPiK+5f01CqW+ZoKLLKr9VMXuCsw3RjWiv8ZpIOa0hxO79np7Ec8DDWALM0bDOaQ=="
       crossorigin="anonymous"
     ></script>
-    <!-- CountUp js -->
+    <!-- CountUp js Script -->
     <script src="./js/jquery.countup.min.js"></script>
-    <!-- Animation Wowjs -->
+    <!-- Animation Wowjs Script -->
     <script src="./js/wow.min.js"></script>
-    <script>
-      new WOW().init();
-    </script>
-    <!-- Lightbox js -->
+    <!-- Lightbox js Script -->
     <script src="./js/lightbox.min.js"></script>
-    <script>
-      $(".counter").countUp();
-    </script>
     <!-- Owl Carousel js -->
     <script src="./js/owl.carousel.min.js"></script>
     <script>
+      new WOW().init();
+      $(".counter").countUp();
       $('.owl-carousel').owlCarousel({
     loop:true,
     margin:10,
     nav:false,
+    autoplay: true,
+    autoplayTimeout: 3000,
+    speed: 1000,
     responsive:{
         0:{
             items:1
